--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currency Converter</title>
 </head>
 <body>
     <h1>Currency Exchange</h1>
@@ -13,12 +13,7 @@
         <li>Convert One Currency to Another</li>
     </ol>
 
-    <input type="number" id="curr_1">
-    <select
-    
-
-    <table id="currency_table">
-    </table>
+    <table id="currency_table"></table>
     
     <script src="index.js"></script>
 </body>
